--- a/pages/制图学基础知识和投影选择.md
+++ b/pages/制图学基础知识和投影选择.md
@@ -63,23 +63,11 @@ public:: true
   虽然现在有许多投影，但只有少部分投影目前还在广泛使用。有些投影曾经在历史上很重要，
   但被更好的选择所取代，有些只在非常特殊的情况下有用，而有些则只是设计者好奇心的产物。
 - 我们经常能看到概念上的辅助表面,比如圆锥体,圆柱体,椭球面或者圆环面,然后球体上的数据(通常是透视构造)转移到辅助面上,然后展开辅助面得到投影,许多投影被归类为圆柱/圆锥投影,但是大部分投影的命名只是一个类比,或者用于定义的,因为它们实际上并不是基于一个中间的辅助投影面设计的,相反,是投影得到的结果可以贴到辅助面上(译注:部分投影是直接用数学手段计算出来的,并不是直接映射到辅助面上再展开的).
-### 不可避免的变形
-	- 一个球体（加上极轴）的两个准正交图，分为八个等部分，被四张相同比例尺的地图包围，从右上角顺时针依次是：方位等距离投影，兰伯特投影，莫勒的等面积四瓣星状投影(Maurer's equal-area star with four lobes), 温克尔三重投影。 
-	  ![image.png](../assets/image_1623331851071_0.png)
-	- 上面的几个投影描绘了相同的球形数据如何以不同的方式被拉伸、压缩、扭曲变形。
-	  * 方位等距离投影只关注保持靠近中心极点部分的方位和距离，但外半球被大大拉伸了：它的极轴变成了一个圆点。
-	  * 兰伯特投影的两个极点变成了线,但它覆盖了与原来的球体相同的区域,而且八块区域的形状完全一致相等。
-	  * 星状投影比较特殊,具有不相等的八瓣和明显的连续形变；然而它的八瓣是等面积的。
-	  * 在温克尔三重投影中，八块区域有不同的形状，面积改变，极点也是线性的，但整体上变形较小。总而言之,正交视图和地图也只能显示一部分的地球,
-	- 所有的投影都有变形,没有投影能适合所有情况,如果投影面是斜切的话,八块区域将会更加奇怪
+- {{embed [[不可避免的变形]]}}
 - 无论投影过程多么复杂，原始表面的特征永远不能完美地转换为平面图：球体映射到平面上总会存在或大或小的变形.变形即角度/形状/距离/面积与真实球面的差异.
 - 每个地图投影都有一个特征的变形模式。制图过程的一个重要部分是理解变形，并选择投影、映射区域和坐标原点的最佳组合，为每项工作将变形减到最小。
 - 圆锥体和圆柱体是高斯曲率为零的可展开曲面（简而言之，在曲面上的每一个点都至少有一条完全包含在曲面中的直线经过）。因此，虽然当将一个球体映射到圆锥体或圆柱体上时，总是会发生失真，但它们在平面上的重新投影（“展开”）不会产生进一步的错误。
-### 坐标原点的选择
-	- ![Snipaste_2021-06-10_21-35-44.png](../assets/Snipaste_2021-06-10_21-35-44_1623332158020_0.png)
-	- 表格中展示了三种（正轴、横轴和斜轴)投影面应用于四种(方位等积、高尔立体、亚尔勃斯等积圆锥和拉格朗日)投影，蓝色表示切投影面(只给出了无限多个可能的投影面中的几个）。一些投影，如高尔立体投影，实际上可以通过透视几何得出；然而，对大多数投影来说，投影面只是说明性的：地图可以展示到一个投影面上，但不是从投影面计算出来的。
-	- 一些投影群的独特方里网（例如方位投影和圆锥投影中的径向对称子午线，圆柱形图中的矩形网格）是通过指定的投影面来实现的。尽管有一个常见的误解，但这种分类并不是排他性的：大多数投影既不涉及圆锥体，也不涉及圆柱体，但也不是方位。对已完成的地图的微旋转，比如把它侧向或倒过来，投影面和投影都将保持不变。另一方面，修改投影面既不影响所表示的区域，也不影响整个地图的形状。
-	  id:: 60c2b85d-1e02-4253-ba14-02750703c5f9
+- {{embed [[坐标原点的选择]]}}
 - **投影面**
   id:: 60c2c338-0901-4943-903d-bcaf2c3dff03
   译注:投影面又称“地图平面”。地图投影中,地球椭球体或球体部分表面的承影平面。投影面都是可展平的面,分为平面、圆锥面、圆柱面。以平面为投影面进行投影的,称方位投影;以圆锥面为投影面投影的,称圆锥投影;以圆柱面为投影面投影的,称圆柱投影。
