--- a/pages/地图投影介绍.md
+++ b/pages/地图投影介绍.md
@@ -9,14 +9,12 @@ public:: true
       * 将三维行星表示为平面地图（我的主要关注点）
       * 设计图示和图例来表达数据
       * 将地理信息印刷和出版
-  
-  为了不同的目的,我们设计了各式各样的地图。当看到两幅不同的世界地图时，我们会思考它们的区别：
+- 为了不同的目的,我们设计了各式各样的地图。当看到两幅不同的世界地图时，我们会思考它们的区别：
     * 为什么把世界画成矩形或者椭圆形，不应该是圆形么？
     * 经纬网必须是平行的么，经线纬线是直的还是弯的？
     * 南美的“尾巴”是向东弯曲还是向西弯曲？
     * 到底什么才是绘制我们这个独特的星球的“正确”的方式？（或者更确切的说，是否有这么一种方式正确的描绘我们的地球？）
-  
-  制图学的一个重要问题是解决如何投影：即将点从一个几乎是球形的大石头上（我们的地球）转移到平面上(即纸上或者电脑屏幕上)。
+- 制图学的一个重要问题是解决如何投影：即将点从一个几乎是球形的大石头上（我们的地球）转移到平面上(即纸上或者电脑屏幕上)。
   以下非正式的描述了一些重要的制图概念，地图是如何绘制的，以及为什么世界地图有这么多不同类型的投影。您可以从这里开始阅读，使用翻页来顺序阅读，或者使用以下目录：
 	- 简介
 		- ![image.png](../assets/image_1623302638531_0.png) [[简单的地图背景知识介绍]]
