--- a/pages/有用的地图属性.md
+++ b/pages/有用的地图属性.md
@@ -6,8 +6,7 @@ public:: true
 # 根据任务选择投影
 - 没有一个地图投影能适应所有任务。在选择投影之前，我们必须仔细权衡利弊，以及它们如何影响
   预期地图的目的。下一节将概述地图的有用属性，并提到了如何使用或滥用投影。
-  
-  对于任何地图，最重要的精度参数可以表示为：
+- 对于任何地图，最重要的精度参数可以表示为：
       * 可以准确测量距离吗？
       * 获得两点之间的最短路径容易么？
       * 保留了方向吗？
