--- a/pages/简单的地图背景知识介绍.md
+++ b/pages/简单的地图背景知识介绍.md
@@ -10,10 +10,8 @@ public:: true
 - 因此，制图学是一门用于设计和选择最合适的投影的艺术和科学。
 ### 我的投影
 - 我一直喜欢世界地图，想知道如何用计算机绘制地图。我花了很多时间推算了将半径、纬度和经度投影到笛卡尔x和y中的公式。当然，我只能绘制经纬网，直到某天我得到了 一个公共领域的地理坐标数据库(起初，我的PC-XT电脑花了一个多小时来绘制一张 粗略的地图)。
-  
-  过了一段时间，我开始设计我的“自己的”投影（实际上我几乎没有访问地图参考书目， 所以我都是重新发明轮子）。我最喜欢的设计是一个等面积的平面投影，灵感来自于桑森、 弗拉姆斯蒂德和埃克特的作品。它非常类似于埃克特的V和VI，也类似于瓦格纳的一些投影。 这个投影的数学推导发布在Uma Projeção Cartográfica Equivalente上， 有葡萄牙语PostScript和葡萄牙语PDF版本。
-  
-  我写了一个简单的应用程序来绘制地图；它有些限制，但很有效（幸运的是，现在它需要 几秒钟，而不是几个小时）。
+- 过了一段时间，我开始设计我的“自己的”投影（实际上我几乎没有访问地图参考书目， 所以我都是重新发明轮子）。我最喜欢的设计是一个等面积的平面投影，灵感来自于桑森、 弗拉姆斯蒂德和埃克特的作品。它非常类似于埃克特的V和VI，也类似于瓦格纳的一些投影。 这个投影的数学推导发布在Uma Projeção Cartográfica Equivalente上， 有葡萄牙语PostScript和葡萄牙语PDF版本。
+- 我写了一个简单的应用程序来绘制地图；它有些限制，但很有效（幸运的是，现在它需要 几秒钟，而不是几个小时）。
 - ![image.png](../assets/image_1623304840872_0.png) 
   我的伪埃克特投影
 ### 你能在这里学到什么
